[package]
name = "injet"
version = "0.1.0"
edition = "2021"
description = "Inject and extract files into PNG images using LSB (Least Significant Bit) method"

[dependencies]
ascii_table = "4.0.2"
clap = { version = "4.3.19", features = ["derive"] }
human-panic = "1.1.5"
image = "0.24.6"
itertools = "0.11.0"

[profile.release]
strip = true
