[package]
name = "injet"
version = "0.3.0"
edition = "2021"
description = "Inject and extract files into PNG images using LSB (Least Significant Bit) method"
license = "MIT"
repository = "https://github.com/deliro/injet"
readme = "README.md"
categories = ["command-line-utilities", "multimedia::images", "security"]
keywords = ["binary", "bin", "steganography", "lsb"]
exclude = ["/.github", "/target"]

[dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
itertools = "0.14"
rand = "0.9"
thiserror = "2"
crc32fast = "1"

[profile.release]
strip = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
rstest = "0.18"
predicates = "3"
